# pathlockd

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.dev.yml  docker-compose.yml  docker-stack.yml  pathlockd.example.toml
.cargo/: config.toml
.github/workflows/: docker-publish.yml
benches/: benchmark.rs
deploy/kubernetes/: README.md  pathlockd-pdb.yaml  pathlockd-services.yaml  pathlockd-statefulset.yaml
docs/: backup-restore.md  locking-semantics.md  openapi.yaml  operations.md  sharding.md  usage-virtual-filesystem.md
examples/php/: polling_client.php
examples/python/: grpc_client.py  hierarchical_rwlock.py  http3_zero_rtt.py  lock_lifecycle.py  mutex.py  pathlockd_client.py  requirements.txt  semaphore.py
llmwiki/: 01-architecture.md  02-data-model.md  03-engine.md  04-events.md  05-config.md  06-testing.md  07-extending.md  08-lock-algorithms.md  README.md
proto/: pathlockd.proto  pathlockd_raft.proto
release_notes/v0.1.2/: gh.md
release_notes/v0.10.0/: gh.md
release_notes/v0.11.0/: gh.md
release_notes/v0.11.1/: gh.md
release_notes/v0.2.2/: gh.md
release_notes/v0.2.5/: gh.md
release_notes/v0.2.6/: gh.md
release_notes/v0.2.9/: gh.md
release_notes/v0.5.0/: gh.md
release_notes/v0.6.1/: gh.md
release_notes/v0.8.1/: gh.md
release_notes/v0.8.2/: gh.md
release_notes/v0.9.0/: gh.md
scripts/: infra.sh  lib.sh  release.sh  test-e2e-stress.sh  test-in-docker.sh  test-integration.sh  test-unit.sh
src/: config.rs  engine.rs  events.rs  lib.rs  macros.rs  main.rs  otel.rs  queue.rs  service.rs  store.rs  store_keys.rs  store_rocksdb.rs
src/cluster/: controller.rs  directory.rs  gossip.rs  health.rs  mod.rs  placement.rs  router.rs
src/raft/: command.rs  log_store.rs  manager.rs  mod.rs  network.rs  server.rs  snapshot.rs  state_machine.rs  types.rs
src/web/: eventlog.rs  h3.rs  mod.rs  rest.rs  sse.rs  state.rs  tls.rs
tests/: chaos.rs  cluster_live.rs  cluster_tests.rs  detect_cycle_tests.rs  e2e_stress.rs  e2e_tests.rs  engine_integration.rs  engine_tests.rs  load.rs  load_cluster.rs
