[package]
name = "pathlockd"
version = "0.2.9"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Fast, scalable, opinionated path-based distributed locking primitives over TiKV, exposed via gRPC"
repository = "https://github.com/alexpacio/pathlockd"
readme = "README.md"

[lib]
name = "pathlockd"
path = "src/lib.rs"

[[bin]]
name = "pathlockd"
path = "src/main.rs"

[dependencies]
tonic = "=0.14.6"
tonic-prost = "=0.14.6"
prost = "=0.14.3"
tikv-client = "=0.4.0"
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net"] }
tokio-stream = { version = "=0.1.18", features = ["sync"] }
async-stream = "=0.3.6"
futures = "=0.3.32"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
serde = { version = "=1.0.228", features = ["derive"] }
bincode = { version = "=2.0.1", features = ["serde"] }
toml = "=1.1.2"
anyhow = "=1.0.102"
thiserror = "=2.0.18"
clap = { version = "=4.6.1", features = ["derive", "env"] }

[build-dependencies]
tonic-prost-build = "=0.14.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
