[package]
name = "pathlockd"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Fast, scalable, opinionated path-based distributed locking primitives with embedded Multi-Raft and RocksDB, exposed via gRPC"
repository = "https://github.com/alexpacio/pathlockd"
readme = "README.md"

[lib]
name = "pathlockd"
path = "src/lib.rs"

[[bin]]
name = "pathlockd"
path = "src/main.rs"

[dependencies]
tonic = "=0.14.6"
tonic-prost = "=0.14.6"
prost = "=0.14.4"
openraft = { version = "0.10.0-alpha.21", features = ["serde"] }
rocksdb = { version = "0.24", features = ["multi-threaded-cf"] }
foca = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bytes = "1.11"
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net"] }
tokio-stream = { version = "=0.1.18", features = ["sync"] }
async-stream = "=0.3.6"
futures = "=0.3.32"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
tracing-opentelemetry = { version = "=0.33.0", default-features = false }
opentelemetry = { version = "=0.32.0", default-features = false, features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "=0.32.1", default-features = false, features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "=0.32.0", default-features = false, features = ["grpc-tonic", "http-proto", "metrics", "reqwest-blocking-client", "tls", "tls-roots", "trace"] }
serde = { version = "=1.0.228", features = ["derive"] }
bincode = { version = "=2.0.1", features = ["serde"] }
toml = "=1.1.2"
anyhow = "=1.0.102"
thiserror = "=2.0.18"
clap = { version = "=4.6.1", features = ["derive", "env"] }

[build-dependencies]
tonic-prost-build = "=0.14.6"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
