[package]
name = "pathlockd"
version = "0.11.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Fast, scalable, opinionated path-based distributed locking primitives with embedded Multi-Raft and RocksDB, exposed via gRPC"
repository = "https://github.com/alexpacio/pathlockd"
readme = "README.md"

[lib]
name = "pathlockd"
path = "src/lib.rs"

[[bin]]
name = "pathlockd"
path = "src/main.rs"

# Peak-throughput benchmark harness. Invoke via `cargo benchmark` (alias in
# .cargo/config.toml). It is a plain `fn main()` (harness = false), is never run
# by `cargo test`, and is not built by `cargo build` / release builds — only by
# `cargo bench`.
[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[dependencies]
tonic = "0.14.6"
tonic-prost = "0.14.6"
prost = "0.14.4"
openraft = { version = "0.10.0-alpha.22", features = ["serde"] }
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }
foca = { version = "1.0.0", features = ["bincode-codec"] }
rand = { version = "0.9", features = ["std", "std_rng"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
bytes = "1.12"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net"] }
tokio-stream = { version = "0.1.18", features = ["sync", "net"] }
async-stream = "0.3.6"
futures = "0.3.32"
tracing = "0.1.44"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-opentelemetry = { version = "0.33.0", default-features = false }
opentelemetry = { version = "0.32.0", default-features = false, features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["grpc-tonic", "http-proto", "metrics", "reqwest-blocking-client", "tls", "tls-roots", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
toml = "1.1.2"
anyhow = "1.0.102"
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive", "env"] }
axum = "0.8.9"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2.2.0"
rcgen = "0.14.8"
http = "1.4.2"
http-body-util = "0.1.3"
tower = "0.5.3"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring"] }
hyper-util = { version = "0.1.20", features = ["server", "server-auto", "http1", "http2", "tokio"] }
hyper = { version = "1.10.1", features = ["server", "http1", "http2"] }

[build-dependencies]
tonic-prost-build = "0.14.6"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
